// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignQuote should render 1`] = `
<div>
  <form
    autocomplete="off"
    class="container"
  >
    <h1
      class="heading"
    >
      Terms of Attestation
    </h1>
    <p
      class="subline"
    >
      The credential will be issued to this Identity
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Light DID Identity
        </span>
      </div>
    </section>
    <p
      class="costs"
    >
      <span>
        Credential Costs: 
      </span>
      <span
        class="amount"
      >
        233
        <span
          class="fractional"
        >
          .0000
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
    </p>
    <dl
      class="details"
    >
      <dt
        class="detailName"
      >
        Full Name
        :
      </dt>
      <dd
        class="detailValue"
      >
        Ingo R�be
      </dd>
      <dt
        class="detailName"
      >
        Email
        :
      </dt>
      <dd
        class="detailValue"
      >
        ingo@kilt.io
      </dd>
      <dt
        class="detailName"
      >
        Credential type
        :
      </dt>
      <dd
        class="detailValue"
      >
        BL-Mail-Simple
      </dd>
      <dt
        class="detailName"
      >
        Attester
        :
      </dt>
      <dd
        class="detailValue"
      >
        SocialKYC
      </dd>
    </dl>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        class="submit"
        type="submit"
      >
        Request Attestation
      </button>
      <output
        class="errorTooltip"
        hidden=""
      >
        DID deleted, please select a different Identity
      </output>
    </p>
  </form>
</div>
`;

exports[`SignQuote should show error message if on-chain DID deleted 1`] = `
<div>
  <form
    autocomplete="off"
    class="container"
  >
    <h1
      class="heading"
    >
      Terms of Attestation
    </h1>
    <p
      class="subline"
    >
      The credential will be issued to this Identity
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Light DID Identity
        </span>
      </div>
    </section>
    <p
      class="costs"
    >
      <span>
        Credential Costs: 
      </span>
      <span
        class="amount"
      >
        233
        <span
          class="fractional"
        >
          .0000
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
    </p>
    <dl
      class="details"
    >
      <dt
        class="detailName"
      >
        Full Name
        :
      </dt>
      <dd
        class="detailValue"
      >
        Ingo R�be
      </dd>
      <dt
        class="detailName"
      >
        Email
        :
      </dt>
      <dd
        class="detailValue"
      >
        ingo@kilt.io
      </dd>
      <dt
        class="detailName"
      >
        Credential type
        :
      </dt>
      <dd
        class="detailValue"
      >
        BL-Mail-Simple
      </dd>
      <dt
        class="detailName"
      >
        Attester
        :
      </dt>
      <dd
        class="detailValue"
      >
        SocialKYC
      </dd>
    </dl>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        class="submit"
        disabled=""
        type="submit"
      >
        Request Attestation
      </button>
      <output
        class="errorTooltip"
      >
        DID deleted, please select a different Identity
      </output>
    </p>
  </form>
</div>
`;
